@@ -61,6 +61,6 @@ xer_encoder.h xer_encoder.c	# XER encoding support
 per_support.h per_support.c	# PER parsing
 per_decoder.h per_decoder.c	# PER decoding support
 per_encoder.h per_encoder.c	# PER encoding support
-#asn-decoder-template.c		# Template for quick decoder creation
+#converter-sample.c		# A sample of transcoder
 
 CODEC-PER:			# THIS IS A SPECIAL SECTION
